--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
-name=ACI_10K_AN-temp-sensor
+name=TS-NTC-103_simple
 version=1.0
-author=Nitrof <https://github.com/NitrofMtl>
-maintainer=Nitrof <https://github.com/NitrofMtl>
-sentence=Read temperature with analog input and 10K RTD
-paragraph=Read temperature with thermodynamic resistor with negative temperature coefficien (NTC). The probe is ACI_10K_AN.
+author=Nitrof <https://github.com/NitrofMtl> michaelwilkinson1992 <https://github.com/michaelwilkinson1992>
+maintainer=michaelwilkinson1992 <https://github.com/michaelwilkinson1992>
+sentence=Read temperature with analog input and TS-NTC-103 thermistor
+paragraph=Read temperature with a TS-NTC-103 series thermistor (NTC, 10kohm, 3435K).
 category=Sensors
-url=https://github.com/NitrofMtl/ACI_10K_an
+url=https://github.com/michaelwilkinson1992/TS-NTC-103_simple
 architectures=*
-includes=ACI_10K_an.h
+includes=TS-NTC-103_simple.h
