--- a/library.properties
+++ b/library.properties
@@ -1,7 +1,7 @@
 name=TS-NTC-103_simple
 version=1.0
 author=Nitrof <https://github.com/NitrofMtl> michaelwilkinson1992 <https://github.com/michaelwilkinson1992>
-maintainer=michaelwilkinson1992 <https://github.com/michaelwilkinson1992>
+maintainer=MickTheMechanic <https://github.com/MickTheMechanic>
 sentence=Read temperature with analog input and TS-NTC-103 thermistor
 paragraph=Read temperature with a TS-NTC-103 series thermistor (NTC, 10kohm, 3435K).
 category=Sensors
